Fix overflow for specific node permissions

--- a/src/Umbraco.Web.UI.Client/src/less/components/users/umb-user-group-preview.less
+++ b/src/Umbraco.Web.UI.Client/src/less/components/users/umb-user-group-preview.less
@@ -34,9 +34,13 @@
     margin-top: 2px;
 }
 
-.umb-user-group-preview__permission {
+.umb-user-group-preview__permissions {
     font-size: 13px;
     color: @gray-3;
+
+    .umb-user-group-preview__permission:not(:last-child):after {
+        content: ', ';
+    }
 }
 
 .umb-user-group-preview__actions {
